--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ button:active{transform:scale(0.97);}
 <div class="section" id="section4">
   <div class="card fadeIn">
     <h2>Hihi <3</h2>
-    <video controls src="assets/video1.mp4" style="max-width:95%;width:95%;height:auto;min-height:400px;border-radius:16px;box-shadow:0 10px 60px rgba(255,44,223,0.38);"></video>
+    <video controls src="assets/video.mp4" style="max-width:95%;width:95%;height:auto;min-height:400px;border-radius:16px;box-shadow:0 10px 60px rgba(255,44,223,0.38);"></video>
     <button class="nextBtn">Last!</button>
   </div>
 </div>
@@ -246,3 +246,4 @@ function animateConfetti(c){
 </script>
 </body>
 </html>
+
